# stellar-privacy-workshop

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  Trunk.toml  deny.toml
.github/workflows/: ub-detection.yml  wasm-build.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
app/: README.md  index.html  package-lock.json
app/crates/core/prover/: Cargo.toml
app/crates/core/stellar/: Cargo.toml
app/crates/core/stellar/src/: contract_state.rs  conversions.rs  ext_data_hash.rs  rpc.rs
app/crates/core/types/src/: amounts.rs
app/crates/core/witness/: Cargo.toml
circuits/: Cargo.toml  build.rs
contracts/circom-groth16-verifier/src/: lib.rs  test.rs
contracts/pool/src/: pool.rs
tools/ceremony-cli/: Cargo.toml
